# image-tools

./: Cargo.toml
src/: main.rs
src/camera/: camera_utils.rs  mod.rs
src/model/: compress.rs  mod.rs
src/utils/: file_dialog_utils.rs  image_utils.rs  mod.rs
ui/: main.slint  theme.slint
ui/common/: content.slint  menu.slint
ui/model/: compress_global.slint  system_global.slint
ui/pages/: about.slint  compress_image.slint  format_image.slint  home.slint  version_upgrade.slint
ui/widgets/: feifei_button.slint  feifei_status_bar.slint  image_list.slint
