[package]
name = "image_ui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.1.1"
tokio ={ version = "1",features = ["full"]}
opencv = "0.84.5"



[build-dependencies]
slint-build = "1.1.1"
