[package]
name = "image"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = {version = "1.1.1",features = ["backend-winit","log"]}
log = "0.4.20"
env_logger = "0.10.0"
tokio ={ version = "1",features = ["full"]}
#打开文件
rfd = "0.11.4"
serde = { version="1.0.188",features = ["derive"] }
serde_json = "1.0.105"

[build-dependencies]
slint-build = "1.1.1"
